gateway/gateway.yaml
#-------------------- istio gateway -------------------#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-common-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
       mode: PASSTHROUGH
    hosts:
    - "*"
  - port:
      number: 80 
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-common-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-common-gateway
  http:
  - match:
    - headers:
        x-demo-app:
          exact: grafana 
    route:
    - destination:
        port:
          number: 3000 
        host: grafana.istio-system.svc.cluster.local
  - match:
    - headers:
        x-demo-app:
          exact: hello
    route:
    - destination:
        port:
          number: 80
        host: frontend.default.svc.cluster.local
  - match:
    - headers:
        x-demo-app:
          exact: jaeger-query 
    route:
    - destination:
        port:
          number: 16686 
        host: jaeger-query.istio-system.svc.cluster.local
  - match:
    - headers:
        x-demo-app:
          exact: servicegraph 
    route:
    - destination:
        port:
          number: 8088 
        host: servicegraph.istio-system.svc.cluster.local
  - match:
    - headers:
        x-demo-app:
          exact: prometheus 
    route:
    - destination:
        port:
          number: 9090 
        host: prometheus.istio-system.svc.cluster.local
